# LongDocFACTScore

./: .gitignore  NOTICE.txt  README.md  pyproject.toml  requirements.txt  run_example.py  setup.py
data/: README.md
data/human_eval_results/LongEval/: pubmed_fine_scores.json
data/human_eval_results/LongSciVerify/: README.md  arxiv_reviewer_1.csv  arxiv_reviewer_2.csv  arxiv_reviewer_3.csv  pubmed_reviewer_1.csv  pubmed_reviewer_2.csv  pubmed_reviewer_3.csv
data/raw_data/: example_text_file.txt
data/raw_data/LongEval/: pubmed_summary_src_doc_data.json
data/raw_data/LongSciVerify/: arxiv_test.json  pubmed_test.json
evaluation_scripts/: IAA_datasets.ipynb  install_requirements.sh  requirements.txt  run_evaluation.py
evaluation_scripts/utils/: correlations.py  factcc_run.py  metrics.py  preprocess.py
src/longdocfactscore/: ldfacts.py
